[svn r10368] menu (header3) : replace the white background by the old background. I corrected (I don't know why) the bug on IE (the breadcrumb sometimes was shifted in the middle of the page)

--- a/main/css/default/default.css
+++ b/main/css/default/default.css
@@ -343,14 +343,18 @@ a.invisible:visited {
 }
 
 #header3 #current {
-	background-color: #fff;
-	border-bottom: 1px solid #fff;
+	background-color: #e9a151;
+	border-bottom: 1px solid #4171b5;
 }
 
 #header3 #current a {
-	border-bottom: 1px solid #fff;
-	color: #fff
+	border-bottom: 0px solid #4171b5;
+	color: rgb(39,84,175)
 }
+
+	#header3 #current a:hover {
+		color: #333;
+	}
 
 #header3 .banner_links {
 	margin: 0;
